Fix string parsing on Linux